methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:3: error: '=' expected but ';' found.
  var bis;Boolean = false
         ^